# fastapi_study

./: alembic.ini  config.py  containers.py  database.py  main.py  pyproject.toml
common/: auth.py
migrations/: env.py
migrations/versions/: 2025_06_11_1126-d53bf62e6c8e_add_user_table.py  2025_06_11_1711-e468bb60b60a_user_add_memo.py  2025_06_29_1538-6deda4a3e994_add_role_to_user_table.py  2025_07_06_0014-1e95738bce73_add_note_tag.py
note/application/: note_service.py
note/infra/db_models/: note.py
note/interface/controllers/: note_controller.py
user/application/: user_service.py
user/domain/: user.py
user/domain/repository/: user_repo.py
user/infra/db_models/: user.py
user/infra/repository/: user_repo.py
user/interface/controllers/: user_controller.py
utils/: crypto.py
