[project]
name = "fastapi_study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
  "alembic>=1.16.1",
  "dependency-injector>=4.47.1",
  "fastapi[standard]>=0.115.12",
  "mysqlclient>=2.2.7",
  "passlib[bcrypt]>=1.7.4",
  "py-ulid>=1.0.3",
  "pydantic-settings>=2.10.1",
  "pydantic[email]>=2.11.5",
  "python-dotenv>=1.1.0",
  "python-jose[cryptography]>=3.5.0",
  "python-multipart[cryptography]>=0.0.20",
]
